entity classloader + runtime guis